--- a/MyBlogSite.Consumers/NotificationConsumer/Properties/launchSettings.json
+++ b/MyBlogSite.Consumers/NotificationConsumer/Properties/launchSettings.json
@@ -1,6 +1,23 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:7211",
+      "sslPort": 44391
+    }
+  },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:7211",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
@@ -14,7 +31,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7211;http://localhost:5003",
+      "applicationUrl": "https://localhost:7211",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
