--- a/MyBlogSite.Consumers/MailConsumer/Properties/launchSettings.json
+++ b/MyBlogSite.Consumers/MailConsumer/Properties/launchSettings.json
@@ -29,7 +29,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "://127.0.0.1:7005",
+      "applicationUrl": "http://127.0.0.1:7005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
