--- a/MyBlogSite.Consumers/MailConsumer/appsettings.Production.json
+++ b/MyBlogSite.Consumers/MailConsumer/appsettings.Production.json
@@ -12,7 +12,7 @@
   "MAIL_CONNECTION": {
     "Host": "smtp.gmail.com",
     "Port": "587",
-    "IsSsl": true,
+    "IsSsl": false,
     "Mail": "osmanpvos@gmail.com",
     "AppPass": "nqitzkeqqugemwsb"
   }
