--- a/MyBlogSite.APIs/Admin/Admin.csproj
+++ b/MyBlogSite.APIs/Admin/Admin.csproj
@@ -27,6 +27,10 @@
       <Content Update="appsettings.Test.json">
         <DependentUpon>appsettings.json</DependentUpon>
       </Content>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+        <DependentUpon>Dockerfile</DependentUpon>
+      </Content>
     </ItemGroup>
 
 </Project>
