--- a/MyBlogSite.Consumers/MailConsumer/Dockerfile
+++ b/MyBlogSite.Consumers/MailConsumer/Dockerfile
@@ -1,25 +1,20 @@
-﻿# Temel imaj olarak .NET SDK kullan
+﻿# 📌 Build aşaması için .NET SDK 9 kullan
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+WORKDIR /src
 
-# Çalışma dizinini ayarla
+# 📌 Proje dosyasını ve bağımlılıkları kopyala
+COPY MyBlogSite.Consumers/MailConsumer/*.csproj MyBlogSite.Consumers/MailConsumer/
+RUN dotnet restore MyBlogSite.Consumers/MailConsumer/MailConsumer.csproj
+
+# 📌 Kodları kopyala ve publish et
+COPY . .
+WORKDIR /src/MyBlogSite.Consumers/MailConsumer
+RUN dotnet publish -c Release -o /app
+
+# 📌 Runtime için .NET 9 kullan
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
 WORKDIR /app
+COPY --from=build /app . 
 
-# Proje dosyasını kopyala ve bağımlılıkları yükle
-COPY *.csproj ./
-RUN dotnet restore
-
-# Uygulamayı derle
-COPY . ./
-RUN dotnet publish -c Release -o /out
-
-# Çalıştırma için temel imaj olarak .NET Runtime kullans
-FROM mcr.microsoft.com/dotnet/aspnet:9.0
-
-# Çalışma dizinini ayarlan
-WORKDIR /app
-
-# Yayınlanan dosyaları kopyalad
-COPY --from=build /out .
-
-# Uygulamayı çalıştırs
+# 📌 Çalıştırma komutu
 ENTRYPOINT ["dotnet", "MailConsumer.dll"]
