--- a/MyBlogSite.APIs/MyBlogSite/Dockerfile
+++ b/MyBlogSite.APIs/MyBlogSite/Dockerfile
@@ -1,25 +1,20 @@
-﻿# Temel imaj olarak .NET SDK kullan
+﻿# 📌 Build aşaması için .NET SDK 8 kullan
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
 
-# Çalışma dizinini ayarla
+# 📌 Proje dosyasını ve bağımlılıkları kopyala
+COPY MyBlogSite.APIs/MyBlogSite/*.csproj MyBlogSite.APIs/MyBlogSite/
+RUN dotnet restore MyBlogSite.APIs/MyBlogSite/MyBlogSite.csproj
+
+# 📌 Kodları kopyala ve publish et
+COPY . .
+WORKDIR /src/MyBlogSite.APIs/MyBlogSite
+RUN dotnet publish -c Release -o /app
+
+# 📌 Runtime için .NET 8 kullan
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
+COPY --from=build /app . 
 
-# Proje dosyasını kopyala ve bağımlılıkları yükle
-COPY *.csproj ./
-RUN dotnet restore
-
-# Uygulamayı derle
-COPY . ./
-RUN dotnet publish -c Release -o /out
-
-# Çalıştırma için temel imaj olarak .NET Runtime kullans
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
-
-# Çalışma dizinini ayarlan
-WORKDIR /app
-
-# Yayınlanan dosyaları kopyalad
-COPY --from=build /out .
-
-# Uygulamayı çalıştırs
+# 📌 Çalıştırma komutu
 ENTRYPOINT ["dotnet", "MyBlogSite.dll"]
