--- a/MyBlogSite.Dal/MyBlogSite.Dal.csproj
+++ b/MyBlogSite.Dal/MyBlogSite.Dal.csproj
@@ -11,7 +11,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\MyBlogSite.Core\MyBlogSite.Core.csproj" />
