--- a/MyBlogSite.Consumers/NotificationConsumer/appsettings.Production.json
+++ b/MyBlogSite.Consumers/NotificationConsumer/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "RabbitMQ": {
-    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
+    "Url": "amqp://admin:KyVCxz5bv7ud%267q%23@127.0.0.1:5672",
     "MailQueueKey": "MailQueue",
     "SignalrQueueKey": "SignalrQueue"
   }
