--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "SQL_CONNECTION": "Host=45.94.4.128;Port=1452;Database=myBlogSite;Username=sa;Password=KyVCxz5bv7ud&7q#;",
   "RabbitMQ": {
-    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
+    "Url": "amqp://admin:KyVCxz5bv7ud%267q%23@45.94.4.128:5672",
     "MailQueueKey": "MailQueue",
     "SignalrQueueKey": "SignalrQueue"
   },
