--- a/MyBlogSite.Consumers/MailConsumer/appsettings.Development.json
+++ b/MyBlogSite.Consumers/MailConsumer/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "RabbitMQ": {
-    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
+    "Url": "amqp://admin:KyVCxz5bv7ud%267q%23@45.94.4.128:5672",
     "MailQueueKey": "MailQueue"
   },
   "MAIL_CONNECTION": {
