--- a/MyBlogSite.Consumers/MailConsumer/appsettings.Production.json
+++ b/MyBlogSite.Consumers/MailConsumer/appsettings.Production.json
@@ -6,13 +6,13 @@
     }
   },
   "RabbitMQ": {
-    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
+    "Url": "amqp://admin:KyVCxz5bv7ud%267q%23@127.0.0.1:5672",
     "MailQueueKey": "MailQueue"
   },
   "MAIL_CONNECTION": {
     "Host": "smtp.gmail.com",
     "Port": "587",
-    "IsSsl": false,
+    "IsSsl": true,
     "Mail": "osmanpvos@gmail.com",
     "AppPass": "nqitzkeqqugemwsb"
   }
