--- a/MyBlogSite.APIs/Admin/appsettings.Production.json
+++ b/MyBlogSite.APIs/Admin/appsettings.Production.json
@@ -1,7 +1,7 @@
 {
   "SQL_CONNECTION": "Host=postgres_c;Port=5432;Database=myBlogSite;Username=sa;Password=KyVCxz5bv7ud&7q#;",
   "RabbitMQ": {
-    "Url": "amqp://admin:KyVCxz5bv7ud%267q%23@127.0.0.1:5672",
+    "Url": "amqp://admin:KyVCxz5bv7ud%267q%23@rabbitmq:5672",
     "MailQueueKey": "MailQueue",
     "SignalrQueueKey": "SignalrQueue"
   },
