--- a/MyBlogSite.Consumers/MailConsumer/appsettings.Production.json
+++ b/MyBlogSite.Consumers/MailConsumer/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "RabbitMQ": {
-    "Url": "amqp://admin:KyVCxz5bv7ud%267q%23@127.0.0.1:5672",
+    "Url": "amqp://admin:KyVCxz5bv7ud%267q%23@rabbitmq:5672",
     "MailQueueKey": "MailQueue"
   },
   "MAIL_CONNECTION": {
