--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -39,3 +39,13 @@ jobs:
         run: |
           docker build -t osmansivrikaya/mailconsumer:latest -f ./MyBlogSite.Consumers/MailConsumer/Dockerfile .
           docker push osmansivrikaya/mailconsumer:latest
+          
+          # 🔥 **Jenkins'i Tetikleme Aşaması**
+  trigger-jenkins:
+    runs-on: ubuntu-latest
+    needs: build-and-push  # Jenkins'i sadece Docker imajları push edildikten sonra tetikle
+    steps:
+      - name: Trigger Jenkins Job
+        run: |
+          curl -X POST "${{ secrets.JENKINS_URL }}/job/Deploy-MyBlogSite/build" \
+          --user "${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_API_TOKEN }}"
